# gsc-code

./: .gitignore  LICENSE  Pipfile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup_shell.sh
conda/: environment_cpu.yaml  environment_gpu.yaml
generative_skill_chaining/: __init__.py
generative_skill_chaining/agents/: __init__.py  base.py  rl.py  sac.py  utils.py  wrapper.py
generative_skill_chaining/diff_models/: classifier_transformer.py  unet_transformer.py
generative_skill_chaining/diff_models/utils/: helpers.py
generative_skill_chaining/encoders/: __init__.py  base.py  state.py  utils.py
generative_skill_chaining/envs/: base.py  empty.py  utils.py  variant.py
generative_skill_chaining/envs/pybullet/: base.py  table_env.py
generative_skill_chaining/mixed_diffusion/: cond_diffusion1D.py  datasets_transformer.py  datasets_transformer_class.py  grad_discriminator.py  sde_cont.py
generative_skill_chaining/mixed_diffusion/utils/: cont_utils.py  diff_utils.py
generative_skill_chaining/networks/: __init__.py
generative_skill_chaining/networks/actors/: __init__.py  mlp.py
generative_skill_chaining/utils/: logging.py  metrics.py  nest.py  spaces.py  tensors.py
scripts/eval/: eval_constrained_packing.py  eval_constrained_packing.sh  eval_diffusion_transformer.py  eval_diffusion_transformer.sh  eval_hook_reach.py  eval_hook_reach.sh
scripts/train/: train_diffusion_transformer.py  train_diffusion_transformer.sh  train_diffusion_transformer_w_classifier.py  train_diffusion_transformer_w_classifier.sh
(+39 files in other folders)
